--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div id="main">
 
       <ul id="nav">
+        <li><a href="http://videojs.com/skins.html">Skins</a></li>
         <li><a href="http://github.com/zencoder/video-js">Source</a></li>
         <li><a href="http://wiki.github.com/zencoder/video-js/browser-device-compatibility">Compatibility</a></li>        
         <li><a href="http://github.com/zencoder/video-js/issues">Issue Tracker</a></li>
