Added preloading back into test skins.

--- a/skins.html
+++ b/skins.html
@@ -59,7 +59,7 @@
       <h2>The Original</h2>
 
       <div class="video-js-box">
-        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls>
+        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls preload>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"'>
           <source src="http://video-js.zencoder.com/oceans-clip.ogg" type='video/ogg; codecs="theora, vorbis"'>
@@ -70,7 +70,7 @@
 
       <h2>VimCSS</h2>
       <div class="video-js-box vim-css">
-        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls>
+        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls preload>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"'>
           <source src="http://video-js.zencoder.com/oceans-clip.ogg" type='video/ogg; codecs="theora, vorbis"'>
@@ -81,7 +81,7 @@
       <h2>HuCSS</h2>
       <!-- Begin VideoJS -->
       <div class="video-js-box hu-css">
-        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls>
+        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls preload>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"'>
           <source src="http://video-js.zencoder.com/oceans-clip.ogg" type='video/ogg; codecs="theora, vorbis"'>
@@ -92,7 +92,7 @@
 
       <h2>TubeCSS</h2>
       <div class="video-js-box tube-css">
-        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls>
+        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls preload>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"'>
           <source src="http://video-js.zencoder.com/oceans-clip.ogg" type='video/ogg; codecs="theora, vorbis"'>
