Updated to latest version.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
   <![endif]-->
 
   <script type="text/javascript" charset="utf-8">
-    // Using JQuery's DOM Ready function
-    // You can also use window.onload, but it loads slower
-    VideoJS.setup();
+
+    VideoJS.setupAllWhenReady();
+    // See demo.html for other setup options
     
-    // If not using a JS library
-    // window.onload = function(){
-    //   VideoJS.setup();
-    // }
   </script>
 
 </head>
