Switched to .ogv instead of .ogg

--- a/demo.html
+++ b/demo.html
@@ -92,7 +92,7 @@
       <a href="http://video-js.zencoder.com/oceans-clip.webm">WebM</a>,
       <a href="http://video-js.zencoder.com/oceans-clip.ogg">Ogg</a><br>
       <!-- Support VideoJS by keeping this link. -->
-      <a href="http://videojs.com">HTML5 Video Player</a> by <a href="http://videojs.com">VideoJS</a>
+      <a href="http://videojs.com">HTML5 Video Player</a> by VideoJS
     </p>
   </div>
   <!-- End VideoJS -->
