--- a/test.html
+++ b/test.html
@@ -65,11 +65,12 @@
 
   <!-- Include the VideoJS Stylesheet -->
   <link rel="stylesheet" href="video-js.css" type="text/css" media="screen" title="Video JS">
+  <link rel="stylesheet" href="skins/vim.css" type="text/css" media="screen">
 </head>
 <body>
 
   <!-- Begin VideoJS -->
-  <div class="video-js-box">
+  <div class="video-js-box vim-css">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
     <video id="example_video_1" class="video-js" width="640" height="264" controls="controls" preload="none" poster="http://video-js.zencoder.com/oceans-clip.png">
       <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
