Added history and logging.

--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
     // Must come after the video.js library
 
     // Add VideoJS to all video tags on the page when the DOM is ready
-    VideoJS.setupAllWhenReady();
+    VideoJS.setupAllWhenReady({ debug: true });
 
     /* ============= OR ============ */
 
