Updated version numbers. Created test folder.

--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,7 @@
   <title>HTML5 Video Player</title>
 
   <!-- Include the VideoJS Library -->
-  <script src="video.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../video.js" type="text/javascript" charset="utf-8"></script>
 
   <script type="text/javascript">
     VideoJS.DOMReady(function(){
@@ -57,7 +57,7 @@
   </style>
 
   <!-- Include the VideoJS Stylesheet -->
-  <link rel="stylesheet" href="video-js.css" type="text/css" media="screen" title="Video JS">
+  <link rel="stylesheet" href="../video-js.css" type="text/css" media="screen" title="Video JS">
 </head>
 <body>
 
