More reorg. Switched spinner to use CSS for centering instead of JS. Created some device checks. Modularized some device fixes.

--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,7 @@
   <script src="../video.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">
     VideoJS.DOMReady(function(){
-      // var myPlayer = VideoJS.setup("example_video_1", { controlsHiding: false });
+      var myPlayer = VideoJS.setup("example_video_1", { controlsHiding: false });
       var vid = document.getElementById("example_video_1"),
           attrTable = document.getElementById("attributes"),
           attrNames = ["error", "networkState", "readyState", "preload", "buffered",
