--- a/test/test.html
+++ b/test/test.html
@@ -66,7 +66,7 @@
 
   <!-- Begin VideoJS -->
   <div id="scrub" style="background: #000; height: 10px;"></div>
-  <div class="video-js-box">
+  <div class="video-js-box vim-css">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
     <video data-subtitles="../demo-subtitles.srt" id="example_video_1" class="video-js" width="640" height="264" controls="controls" preload="auto" poster="http://video-js.zencoder.com/oceans-clip.png">
       <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
