Cleaned up spinner styles.

--- a/test/test.html
+++ b/test/test.html
@@ -11,8 +11,7 @@
       var myPlayer = VideoJS.setup("example_video_1", { 
         controlsHiding: false, 
         controlsBelow: false, 
-        showControlsAtStart: true,
-        linksHiding: false,
+        showControlsAtStart: true
       });
       myPlayer.activateControl(document.getElementById("scrub"), "loadProgressBar");
       var vid = document.getElementById("example_video_1"),
