Splitting up into development files. Creating v2.0.

--- a/dev/flowplayer/test.html
+++ b/dev/flowplayer/test.html
@@ -5,21 +5,21 @@
   <title>HTML5 Video Player</title>
 
   <!-- Include the VideoJS Library -->
-  <script src="src/video.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/html5.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/behaviors.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/lib.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/video-js.jquery.js" type="text/javascript" charset="utf-8"></script>
-  <!-- <script src="flowplayer/video-js.flowplayer.js" type="text/javascript" charset="utf-8"></script> -->
+  <script src="../src/video.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/html5.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/behaviors.js" type="text/javascript" charset="utf-8"></script>
+
+  <!-- <script type="text/javascript" src="flowplayer-3.2.4.min.js"></script> -->
+  <script type="text/javascript" src="video-js.flowplayer.js"></script>
 
   <script type="text/javascript">
     VideoJS.DOMReady(function(){
       myPlayer = VideoJS.setup("example_video_1", { 
-        // controlsHiding: true, 
-        // controlsBelow: false, 
-        // showControlsAtStart: true
+        controlsHiding: true, 
+        controlsBelow: false, 
+        showControlsAtStart: true
       });
-      // myPlayer.activateElement(document.getElementById("scrub"), "spinner");
+      myPlayer.activateElement(document.getElementById("scrub"), "loadProgressBar");
       var vid = document.getElementById("example_video_1"),
           attrTable = document.getElementById("attributes"),
           attrNames = ["error", "networkState", "readyState", "preload", "buffered",
@@ -67,33 +67,25 @@
   </style>
 
   <!-- Include the VideoJS Stylesheet -->
-  <link rel="stylesheet" href="../video-js.css" type="text/css" media="screen" title="Video JS">
-  <link rel="stylesheet" href="../skins/tube.css" type="text/css" media="screen" title="Video JS">
-  <link rel="stylesheet" href="../skins/hu.css" type="text/css" media="screen" title="Video JS">
-  <link rel="stylesheet" href="../skins/vim.css" type="text/css" media="screen" title="Video JS">
+  <link rel="stylesheet" href="../../video-js.css" type="text/css" media="screen" title="Video JS">
+  <link rel="stylesheet" href="../../skins/tube.css" type="text/css" media="screen" title="Video JS">
+  <link rel="stylesheet" href="../../skins/hu.css" type="text/css" media="screen" title="Video JS">
+  <link rel="stylesheet" href="../../skins/vim.css" type="text/css" media="screen" title="Video JS">
 </head>
 <body>
 
   <!-- Begin VideoJS -->
   <div id="scrub" style="background: #000; height: 10px;"></div>
-  
+
   <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-    <video data-subtitles="../demo-subtitles.srt" id="example_video_1" class="video-js" width="640" height="264" controls="controls" preload="none" poster="http://video-js.zencoder.com/oceans-clip.png">
+    <video id="example_video_1" class="video-js" width="640" height="264" controls="controls" preload="auto" poster="http://video-js.zencoder.com/oceans-clip.png">
       <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
       <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"' />
       <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg; codecs="theora, vorbis"' />
       <!-- <track kind="subtitles" src="../demo-subtitles.srt" srclang="en-US" label="English"></track> -->
       <!-- Flash Fallback. Use any flash video player here. Make sure to keep the vjs-flash-fallback class. -->
-      <object id="flash_fallback_1" class="vjs-flash-fallback" width="640" height="264" type="application/x-shockwave-flash"
-        data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
-        <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
-        <param name="allowfullscreen" value="true" />
-        <param name="flashvars" value='config={"playlist":["http://video-js.zencoder.com/oceans-clip.png", {"url": "http://video-js.zencoder.com/oceans-clip.mp4","autoPlay":false,"autoBuffering":true}]}' />
-        <!-- Image Fallback. Typically the same as the poster image. -->
-        <img src="http://video-js.zencoder.com/oceans-clip.png" width="640" height="264" alt="Poster Image"
-          title="No video playback capabilities." />
-      </object>
+      <div class="vjs-flash-fallback" width="640" height="264" href="http://video-js.zencoder.com/oceans-clip.mp4"></div>
     </video>
     <!-- Download links provided for devices that can't play video in the browser. -->
     <p class="vjs-no-video"><strong>Download Video:</strong>
