Fixed a bug where wouldn't track time after click on scrubber

--- a/dev/test.html
+++ b/dev/test.html
@@ -19,7 +19,7 @@
         // controlsBelow: false, 
         // showControlsAtStart: true
       });
-      // myPlayer.activateElement(document.getElementById("scrub"), "spinner");
+      myPlayer.activateElement(document.getElementById("scrub"), "playProgressBar");
       var vid = document.getElementById("example_video_1"),
           attrTable = document.getElementById("attributes"),
           attrNames = ["error", "networkState", "readyState", "preload", "buffered",
