--- a/demo.html
+++ b/demo.html
@@ -71,7 +71,7 @@
   <!-- Begin VideoJS -->
   <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-    <video id="example_video_1" class="video-js" width="640" height="264" controls="controls" preload="auto" poster="http://video-js.zencoder.com/oceans-clip.png">
+    <video id="example_video_1" class="video-js" width="640" height="264" data-subToggle="chkCC" data-subtitles="./demo-subtitles.ttxt" controls="controls" preload="auto" poster="http://video-js.zencoder.com/oceans-clip.png">
       <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
       <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"' />
       <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg; codecs="theora, vorbis"' />
@@ -86,6 +86,11 @@
           title="No video playback capabilities." />
       </object>
     </video>
+    
+    <span>
+      <input type="checkbox" id="chkCC" />
+      <label for="chkCC">Show Subtitles</label>
+    </span>
     <!-- Download links provided for devices that can't play video in the browser. -->
     <p class="vjs-no-video"><strong>Download Video:</strong>
       <a href="http://video-js.zencoder.com/oceans-clip.mp4">MP4</a>,
